--- a/imall-coupon/src/main/resources/application.yml
+++ b/imall-coupon/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 18082
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
@@ -14,6 +16,12 @@ spring:
       max-pool-prepared-statement-per-connection-size: 20
       time-between-eviction-runs-millis: 60000
       min-evictable-idle-time-millis: 300000
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: imall-coupon
 mybatis-plus:
   config-location: classpath:/mapper/**/*.xml
   global-config:
